DE152805;fix issue: view selected not visible in all panel

--- a/production/src/navigation/navigation-tree.css
+++ b/production/src/navigation/navigation-tree.css
@@ -30,7 +30,7 @@
   line-height: 1;
 }
 
-.top-filter-panel .mstr-switch-container {
+.top-filter-panel > .mstr-switch-container {
   display: none;
 }
 
